--- a/config/kcp/kustomization.yaml
+++ b/config/kcp/kustomization.yaml
@@ -13,46 +13,8 @@ namespace: application-service-system
 #  someName: someValue
 
 bases:
-#- ../crd
-- ../manager
-- ../kcp-rbac
+- ../kcp-manager
 
 resources:
 - apiexport_has.yaml
 - apiresourceschema_has.yaml
-#- clusterrole.yaml
-#- clusterrolebinding.yaml
-
-patches:
-# Disable webhooks by default on KCP
-# Webhooks can be optionally enabled after deploy
-- patch: |-
-    - op: add
-      path: /spec/template/spec/containers/0/env/-
-      value:
-        name: ENABLE_WEBHOOKS
-        value: "false"
-  target:
-    kind: Deployment
-    name: controller-manager
-
-# HAS on KCP needs to use default service account name right now
-- patch: |-
-    - op: replace
-      path: /spec/template/spec/serviceAccountName
-      value: default
-  target:
-    kind: Deployment
-    name: controller-manager
-
-# HAS on KCP needs to pass in the APIExport for HAS when the operator starts up
-- patch: |-
-    - op: add
-      path: /spec/template/spec/containers/0/args/-
-      value: --api-export-name
-    - op: add
-      path: /spec/template/spec/containers/0/args/-
-      value: has
-  target:
-    kind: Deployment
-    name: controller-manager
