--- a/config/kcp/kustomization.yaml
+++ b/config/kcp/kustomization.yaml
@@ -6,39 +6,15 @@ namespace: application-service-system
 # "wordpress" becomes "alices-wordpress".
 # Note that it should also match with the prefix (text before '-') of the namespace
 # field above.
-namePrefix: application-service-
+#namePrefix: application-service-
 
 # Labels to add to all resources and selectors.
 #commonLabels:
 #  someName: someValue
 
 bases:
-- ../crd
-- ../manager
-- ../rbac
+- ../kcp-manager
 
 resources:
 - apiexport_has.yaml
 - apiresourceschema_has.yaml
-
-patches:
-# Disable webhooks by default on KCP
-# Webhooks can be optionally enabled after deploy
-- patch: |-
-    - op: add
-      path: /spec/template/spec/containers/0/env/-
-      value:
-        name: ENABLE_WEBHOOKS
-        value: "false"
-  target:
-    kind: Deployment
-    name: controller-manager
-
-# HAS on KCP needs to use default service account name right now
-- patch: |-
-    - op: replace
-      path: /spec/template/spec/serviceAccountName
-      value: default
-  target:
-    kind: Deployment
-    name: controller-manager
