Fix hanging tests
Signed-off-by: John Collier <jcollier@redhat.com>

--- a/config/kcp/apibinding_has.yaml
+++ b/config/kcp/apibinding_has.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   reference:
     workspace:
-      path: $(KCP_WORKSPACE)
+      path: ${KCP_WORKSPACE}
       exportName: has
   acceptedPermissionClaims:
       - group: ""
