Update deploy-kcp target for application-api
Signed-off-by: John Collier <jcollier@redhat.com>

--- a/config/kcp/apibinding_has.yaml
+++ b/config/kcp/apibinding_has.yaml
@@ -6,7 +6,7 @@ spec:
   reference:
     workspace:
       path: ${KCP_WORKSPACE}
-      exportName: has
+      exportName: application-api
   acceptedPermissionClaims:
       - group: ""
         resource: "secrets"
