[DEVHAS-188] Add missing ApplicationSnapshot permission claim
Signed-off-by: John Collier <jcollier@redhat.com>

--- a/config/kcp/apiexport_application-service.yaml
+++ b/config/kcp/apiexport_application-service.yaml
@@ -15,6 +15,9 @@ spec:
       resource: "applications"
     - identityHash: application-api
       group: "appstudio.redhat.com"
+      resource: "applicationsnapshots"
+    - identityHash: application-api
+      group: "appstudio.redhat.com"
       resource: "applicationsnapshotenvironmentbindings"
     - identityHash: application-api
       group: "appstudio.redhat.com"
