Add missing permissionclaims for dev
Signed-off-by: John Collier <jcollier@redhat.com>

--- a/config/kcp-dev/apibinding.yaml
+++ b/config/kcp-dev/apibinding.yaml
@@ -20,6 +20,10 @@ spec:
       state: Accepted
     - identityHash: ${IDENTITY_HASH}
       group: "appstudio.redhat.com"
+      resource: "applicationsnapshots"
+      state: Accepted
+    - identityHash: ${IDENTITY_HASH}
+      group: "appstudio.redhat.com"
       resource: "applicationsnapshotenvironmentbindings"
       state: Accepted
     - identityHash: ${IDENTITY_HASH}
