PLNSRVCE-758: Detect HACBS workflow based on apibinding
Check if 'integration-service' apibinding exists if so then set HACBS
workflow.

--- a/config/kcp/apiexport_application-service.yaml
+++ b/config/kcp/apiexport_application-service.yaml
@@ -10,6 +10,8 @@ spec:
       resource: "namespaces"
     - group: ""
       resource: "configmaps"
+    - group: apis.kcp.dev
+      resource: apibindings
     - identityHash: application-api
       group: "appstudio.redhat.com"
       resource: "applications"
