--- a/config/kcp-dev/apiexport.yaml
+++ b/config/kcp-dev/apiexport.yaml
@@ -15,10 +15,10 @@ spec:
       resource: "applications"
     - identityHash: ${IDENTITY_HASH}
       group: "appstudio.redhat.com"
-      resource: "applicationsnapshots"
+      resource: "snapshots"
     - identityHash: ${IDENTITY_HASH}
       group: "appstudio.redhat.com"
-      resource: "applicationsnapshotenvironmentbindings"
+      resource: "snapshotenvironmentbindings"
     - identityHash: ${IDENTITY_HASH}
       group: "appstudio.redhat.com"
       resource: "components"
