--- a/config/samples/binding/binding.yaml
+++ b/config/samples/binding/binding.yaml
@@ -1,8 +1,8 @@
 # API type definition is in github.com/redhat-appstudio/managed-gitops
 apiVersion: appstudio.redhat.com/v1alpha1
-kind: ApplicationSnapshotEnvironmentBinding
+kind: SnapshotEnvironmentBinding
 metadata:
-  name: applicationsnapshotenvironmentbinding-sample
+  name: snapshotenvironmentbinding-sample
   labels: 
     # These labels are recommended, so that we can use label selectors to easily find all apps/envs, without needing to do a full namespace list.
     # Pls check v3 draft https://docs.google.com/document/d/1-_rWLgALd5pdSlqNNcQ5FSrD00fZb0l_exU-_FiL68o/edit?pli=1#heading=h.ljlaq1jezwn for more info. 
@@ -11,7 +11,7 @@ metadata:
 spec:
   application: application-sample
   environment: staging
-  snapshot: applicationsnapshot-sample
+  snapshot: snapshot-sample
   components:
   - name: component-sample
     configuration:
