[DEVHAS-191] Rename AppStudio shared CRD names (#211)
* [DEVHAS-191] Rename AppStudio shared CRD names

Signed-off-by: John Collier <jcollier@redhat.com>

* Remove syncer.yaml

Signed-off-by: John Collier <jcollier@redhat.com>

* Update go.mod

Signed-off-by: John Collier <jcollier@redhat.com>

* Go mod tidy

Signed-off-by: John Collier <jcollier@redhat.com>

* Update application-api test dep

Signed-off-by: John Collier <jcollier@redhat.com>

Signed-off-by: John Collier <jcollier@redhat.com>

--- a/config/kcp/apiexport_application-service.yaml
+++ b/config/kcp/apiexport_application-service.yaml
@@ -17,10 +17,10 @@ spec:
       resource: "applications"
     - identityHash: application-api
       group: "appstudio.redhat.com"
-      resource: "applicationsnapshots"
+      resource: "snapshots"
     - identityHash: application-api
       group: "appstudio.redhat.com"
-      resource: "applicationsnapshotenvironmentbindings"
+      resource: "snapshotenvironmentbindings"
     - identityHash: application-api
       group: "appstudio.redhat.com"
       resource: "components"
