Enable pprof on HAS
Signed-off-by: John Collier <jcollier@redhat.com>

--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -10,6 +10,7 @@ namePrefix: application-service-
 
 resources:
 - manager.yaml
+- pprof_service.yaml
 
 generatorOptions:
   disableNameSuffixHash: true
