--- a/config/samples/application/app.yaml
+++ b/config/samples/application/app.yaml
@@ -1,7 +1,7 @@
 apiVersion: appstudio.redhat.com/v1alpha1
 kind: Application
 metadata:
-  name: application-sample-dec6-1
+  name: application-sample
 spec:
   displayName: "petclinic"
   description: "application definition for petclinic-app"
