Use a Kube job to generate GitOps resources
Signed-off-by: John Collier <jcollier@redhat.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -134,6 +134,16 @@ rules:
   - list
   - watch
 - apiGroups:
+  - batch
+  resources:
+  - jobs
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - watch
+- apiGroups:
   - ""
   resources:
   - configmaps
