--- a/config/samples/component/component-basic.yaml
+++ b/config/samples/component/component-basic.yaml
@@ -1,30 +1,27 @@
 apiVersion: appstudio.redhat.com/v1alpha1
 kind: Component
 metadata:
-  name: component-sample-4
+  name: component-sample
 spec:
   componentName: backend
-  application: application-sample-4
-  containerImage: quay.io/myimage2
-  replicas: 5
-  targetPort: 5566
-  route: route111222
+  application: application-sample
+  replicas: 1
+  targetPort: 1111
+  route: route111
   resources:
     limits:
       memory: "500Mi"
       cpu: "2"
       storage: "400Mi"
     requests:
-      memory: "401Mi"
-      cpu: "701m"
-      storage: "201Mi"
+      memory: "400Mi"
+      cpu: "700m"
+      storage: "200Mi"
   env:
   - name: FOO
-    value: "foo11"
+    value: "foo1"
   - name: BAR
-    value: "bar11"
-  # source:
-  #   git:
-  #     url: https://github.com/devfile-samples/devfile-sample-java-springboot-basic
-      # devfileUrl: https://raw.githubusercontent.com/maysunfaisal/devfileexample/main/devfile.yaml
-      # dockerfileUrl: https://raw.githubusercontent.com/devfile-samples/devfile-sample-java-springboot-basic/main/docker/Dockerfile
+    value: "bar1"
+  source:
+    git:
+      url: https://github.com/devfile-samples/devfile-sample-java-springboot-basic
