Make default namespace application-service and not application-service-system
Signed-off-by: John Collier <jcollier@redhat.com>

--- a/bundle/manifests/application-service-manager-rolebinding-appsnapshot_rbac.authorization.k8s.io_v1_clusterrolebinding.yaml
+++ b/bundle/manifests/application-service-manager-rolebinding-appsnapshot_rbac.authorization.k8s.io_v1_clusterrolebinding.yaml
@@ -10,4 +10,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: application-service-controller-manager
-  namespace: application-service-system
+  namespace: application-service
