--- a/bundle/manifests/appstudio.redhat.com_applications.yaml
+++ b/bundle/manifests/appstudio.redhat.com_applications.yaml
@@ -12,7 +12,7 @@ spec:
       clientConfig:
         service:
           name: application-service-webhook-service
-          namespace: application-service-system
+          namespace: application-service
           path: /convert
       conversionReviewVersions:
       - v1
