--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -66,6 +66,12 @@ spec:
               name: has-github-token
               key: token
               optional: true
+        - name: CDQ_GITHUB_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: has-github-token
+              key: cdq-token
+              optional: true
         - name: DEVFILE_REGISTRY_URL
           valueFrom:
             configMapKeyRef:
