Update operator config and docs
Signed-off-by: John Collier <jcollier@redhat.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -66,6 +66,12 @@ spec:
               name: has-github-token
               key: token
               optional: true
+        - name: GITHUB_TOKEN_LIST
+          valueFrom:
+            secretKeyRef:
+              name: has-github-token
+              key: tokens
+              optional: true
         - name: CDQ_GITHUB_TOKEN
           valueFrom:
             secretKeyRef:
