Add ServiceMonitor to HAS repo, update grafana dashboard to remove non-existent datasource
Signed-off-by: Kim Tsao <ktsao@redhat.com>

--- a/config/prometheus/monitor.yaml
+++ b/config/prometheus/monitor.yaml
@@ -1,18 +1,54 @@
-
-# Prometheus Monitor Service (Metrics)
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: application-service-metrics-reader
+  namespace: application-service # deployment namespace from https://github.com/redhat-appstudio/infra-deployments/blob/main/components/has/base/kustomization.yaml#L20
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: application-service-metrics-reader
+  namespace: application-service
+  annotations:
+    kubernetes.io/service-account.name: metrics-reader
+type: kubernetes.io/service-account-token
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: application-service-metrics-reader
+rules:
+  - nonResourceURLs:
+      - /metrics
+    verbs:
+      - get
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: prometheus-application-service-metrics-reader
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: application-service-metrics-reader
+subjects:
+  - kind: ServiceAccount
+    name: application-service-metrics-reader
+    namespace: application-service
+---
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  labels:
-    control-plane: controller-manager
-  name: controller-manager-metrics-monitor
-  namespace: system
+  name: application-service
+  namespace: application-service
 spec:
   endpoints:
     - path: /metrics
       port: https
       scheme: https
-      bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+      bearerTokenSecret:
+        name: "metrics-reader"
+        key: token
       tlsConfig:
         insecureSkipVerify: true
   selector:
