--- a/config/prometheus/monitor.yaml
+++ b/config/prometheus/monitor.yaml
@@ -1,27 +1,17 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: application-service-metrics-reader
+  name: metrics-reader
   namespace: application-service # deployment namespace from https://github.com/redhat-appstudio/infra-deployments/blob/main/components/has/base/kustomization.yaml#L20
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: application-service-metrics-reader
+  name: metrics-reader
   namespace: application-service
   annotations:
     kubernetes.io/service-account.name: metrics-reader
 type: kubernetes.io/service-account-token
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: application-service-metrics-reader
-rules:
-  - nonResourceURLs:
-      - /metrics
-    verbs:
-      - get
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -30,16 +20,16 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: application-service-metrics-reader
+  name: metrics-reader
 subjects:
   - kind: ServiceAccount
-    name: application-service-metrics-reader
+    name: metrics-reader
     namespace: application-service
 ---
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: application-service
+  name: service-monitor
   namespace: application-service
 spec:
   endpoints:
