add rate limiting dashboard
Signed-off-by: Kim Tsao <ktsao@redhat.com>

--- a/config/monitoring/kustomization.yaml
+++ b/config/monitoring/kustomization.yaml
@@ -12,3 +12,6 @@ configMapGenerator:
   - name: grafana-dashboard-has-gitops-repo-metrics
     files:
       - grafana-dashboards/has-gitops-repo-metrics.json
+  - name: grafana-dashboard-has-rate-limiting-metrics
+    files:
+      - grafana-dashboards/has-rate-limiting-metrics.json
