--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -22,5 +22,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: quay.io/redhat-appstudio/application-service
-  newTag: next
+  newName: yangcao77/hasoperator
+  newTag: "95"
