--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -116,6 +116,7 @@ jobs:
           PACT_BROKER_USERNAME:  ${{ secrets.PACT_BROKER_USERNAME }}
           PACT_BROKER_PASSWORD:  ${{ secrets.PACT_BROKER_PASSWORD }}
         run: |
+          env | grep PACT
           make pact
   docker:
     name: Check docker build
