--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -110,14 +110,14 @@ jobs:
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2.1.0
-      - name: Test Pact contracts
-        continue-on-error: true
-        env: 
-          PACT_BROKER_USERNAME:  ${{ secrets.PACT_BROKER_USERNAME }}
-          PACT_BROKER_PASSWORD:  ${{ secrets.PACT_BROKER_PASSWORD }}
-        run: |
-          env | grep PACT
-          make pact
+      # - name: Test Pact contracts
+      #   continue-on-error: true
+      #   env: 
+      #     PACT_BROKER_USERNAME:  ${{ secrets.PACT_BROKER_USERNAME }}
+      #     PACT_BROKER_PASSWORD:  ${{ secrets.PACT_BROKER_PASSWORD }}
+      #   run: |
+      #     env | grep PACT
+      #     make pact
   docker:
     name: Check docker build
     runs-on: ubuntu-latest
@@ -128,14 +128,52 @@ jobs:
           fetch-depth: 0
       - name: Check if dockerimage build is working
         run: docker build -f ./Dockerfile .
-  # pact:
-  #   name: Pact tests
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Test Pact contracts
-  #       continue-on-error: true
-  #       env: 
-  #         PACT_BROKER_USERNAME:  ${{ secrets.PACT_BROKER_USERNAME }}
-  #         PACT_BROKER_PASSWORD:  ${{ secrets.PACT_BROKER_PASSWORD }}
-  #       run: |
-  #         make pact
+  pact:
+    name: Pact tests
+    runs-on: ubuntu-latest
+    env: 
+      PACT_BROKER_USERNAME:  ${{ secrets.PACT_BROKER_USERNAME }}
+      PACT_BROKER_PASSWORD:  ${{ secrets.PACT_BROKER_PASSWORD }}
+      OPERATOR_SDK_VERSION: v1.14.0
+    steps:
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.18
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Cache Operator SDK ${{ env.OPERATOR_SDK_VERSION }}
+        uses: actions/cache@v2
+        id: cache-operator-sdk
+        with:
+          path: ~/cache
+          key: operator-sdk-${{ env.OPERATOR_SDK_VERSION }}
+      - name: Download Operator SDK ${{ env.OPERATOR_SDK_VERSION }}
+        if: steps.cache-operator-sdk.outputs.cache-hit != 'true'
+        run: |
+          mkdir -p ~/cache
+          wget https://github.com/operator-framework/operator-sdk/releases/download/${OPERATOR_SDK_VERSION}/operator-sdk_linux_amd64 -O ~/cache/operator-sdk-${OPERATOR_SDK_VERSION} > /dev/null -O ~/cache/operator-sdk-${OPERATOR_SDK_VERSION} > /dev/null
+          chmod +x ~/cache/operator-sdk-${OPERATOR_SDK_VERSION}
+      - name: Install Operator SDK ${{ env.OPERATOR_SDK_VERSION }}
+        run: |
+          mkdir -p ~/bin
+          cp ~/cache/operator-sdk-${OPERATOR_SDK_VERSION} ~/bin/operator-sdk
+          echo "$HOME/bin" >> $GITHUB_PATH
+      - name: Cache go modules
+        id: cache-mod
+        uses: actions/cache@v2
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+      - name: Download dependencies
+        run: go mod download
+        if: steps.cache-mod.outputs.cache-hit != 'true'
+      - name: Test Pact contracts
+        continue-on-error: true
+        run: |
+          env | grep PACT
+          make pact
