--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-20.04
     env:
       OPERATOR_SDK_VERSION: v1.14.0
+      PR_CHECK: true
     steps:
       - name: Set up Go 1.x
         uses: actions/setup-go@v2
@@ -110,14 +111,6 @@ jobs:
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2.1.0
-      # - name: Test Pact contracts
-      #   continue-on-error: true
-      #   env: 
-      #     PACT_BROKER_USERNAME:  ${{ secrets.PACT_BROKER_USERNAME }}
-      #     PACT_BROKER_PASSWORD:  ${{ secrets.PACT_BROKER_PASSWORD }}
-      #   run: |
-      #     env | grep PACT
-      #     make pact
   docker:
     name: Check docker build
     runs-on: ubuntu-latest
@@ -134,6 +127,9 @@ jobs:
     env: 
       PACT_BROKER_USERNAME:  ${{ secrets.PACT_BROKER_USERNAME }}
       PACT_BROKER_PASSWORD:  ${{ secrets.PACT_BROKER_PASSWORD }}
+      PR_NUMBER: ${{ github.event.pull_request.number }}
+      COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
+      PR_CHECK: true
       OPERATOR_SDK_VERSION: v1.14.0
     steps:
       - name: Set up Go 1.x
@@ -173,7 +169,8 @@ jobs:
         run: go mod download
         if: steps.cache-mod.outputs.cache-hit != 'true'
       - name: Test Pact contracts
-        continue-on-error: true
         run: |
-          env | grep PACT
+          wget -qO- https://github.com/pact-foundation/pact-ruby-standalone/releases/download/v1.92.0/pact-1.92.0-linux-x86_64.tar.gz | tar xz --one-top-level=./pactcli
+          PATH=${PATH}:$(pwd)/pactcli/pact/bin
+          COMMIT_SHA=${COMMIT_SHA:0:7} 
           make pact
