fix yaml pkg import
Signed-off-by: Stephanie <yangcao@redhat.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,9 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/main.go",
+            "program": "${workspaceFolder}/cdq-analysis/main.go",
             "cwd": "${workspaceFolder}",
+            "args": ["", "testnamespace", "testname" ,"./","devfile.yaml","","https://github.com/devfile-samples/devfile-sample-java-springboot-basic","main","https://registry.devfile.io","true","false","false"]
         }
     ]
 }
