--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,8 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/cdq-analysis/main.go",
+            "program": "${workspaceFolder}/main.go",
             "cwd": "${workspaceFolder}",
-            "args": ["", "testnamespace", "testname" ,"./","devfile.yaml","","https://github.com/devfile-samples/devfile-sample-java-springboot-basic","main","https://registry.devfile.io","true","false","false"]
         }
     ]
 }
