--- a/codecov.yml
+++ b/codecov.yml
@@ -1,8 +1,11 @@
 ignore:
   - "api/v1alpha1/zz_generated.deepcopy.go" # generated file, does not need to be included in the coverage
   - "pkg/spi/spi_mock.go" # mock file for testing
-  - "pkg/devfile/detect_mock.go" # mock file for testing
   - "gitops/generate_mock.go" # mock file for testing
   - "controllers/start_test_env.go" # setup of a test environment for unit and Pact tests
   - "controllers/application_pact_test_state_handlers.go" # state handlers for the Pact tests
   - "controllers/application_pact_test_utils.go" # utils file for the Pact tests
+  - "cdq-analysis/pkg/detect_mock.go" # mock file for testing
+  - "cdq-analysis/main.go" # entry point for cdq-analysis docker image
+  - "pkg/github/mock.go" # mock file for testing
+  - "pkg/github/token_moke.go" # mock file for testing
