--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -172,3 +172,21 @@ jobs:
           PATH=${PATH}:$(pwd)/pactcli/pact/bin
           COMMIT_SHA=${COMMIT_SHA:0:7} 
           make pact
+
+  build-cdq-analysis-image:
+    name: Check CDQ Analysis Image Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.18
+      - name: Change to the GitOps Generator directory
+        run: cd cdq-analysis/
+      - name: Check if dockerimage build is working
+        run: docker build -f ./Dockerfile .
+
