--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -135,6 +135,8 @@ jobs:
           go-version: 1.18
       - name: Change to the cdq-analysis directory
         run: cd cdq-analysis/
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2 
       - name: Check if dockerimage build is working
         run: docker build -f ./Dockerfile .
   pact:
