Update tektok pipelineref
Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/.tekton/pull-request.yaml
+++ b/.tekton/pull-request.yaml
@@ -15,8 +15,15 @@ spec:
     - name: output-image
       value: "quay.io/redhat-appstudio/pull-request-builds:has-{{revision}}"
   pipelineRef:
-    name: docker-build
-    bundle: quay.io/redhat-appstudio-tekton-catalog/pipeline-core-services-docker-build:latest
+    params:
+      - name: bundle
+        value: >-
+          quay.io/redhat-appstudio-tekton-catalog/pipeline-core-services-docker-build:latest
+      - name: name
+        value: docker-build
+      - name: kind
+        value: Pipeline
+    resolver: bundles
   workspaces:
     - name: workspace
       volumeClaimTemplate:
