--- a/bundle/manifests/application-service.clusterserviceversion.yaml
+++ b/bundle/manifests/application-service.clusterserviceversion.yaml
@@ -2,71 +2,15 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: ClusterServiceVersion
 metadata:
   annotations:
-    alm-examples: |-
-      [
-        {
-          "apiVersion": "appstudio.redhat.com/v1alpha1",
-          "kind": "Application",
-          "metadata": {
-            "name": "application-sample"
-          },
-          "spec": {
-            "description": "application definition for petclinic-app",
-            "displayName": "petclinic"
-          }
-        },
-        {
-          "apiVersion": "appstudio.redhat.com/v1alpha1",
-          "kind": "Component",
-          "metadata": {
-            "name": "component-sample"
-          },
-          "spec": {
-            "application": "application-sample",
-            "componentName": "backend",
-            "source": {
-              "git": {
-                "url": "https://github.com/devfile-samples/devfile-sample-java-springboot-basic"
-              }
-            }
-          }
-        },
-        {
-          "apiVersion": "appstudio.redhat.com/v1alpha1",
-          "kind": "ComponentDetectionQuery",
-          "metadata": {
-            "name": "componentdetectionquery-sample"
-          },
-          "spec": {
-            "foo": "bar"
-          }
-        }
-      ]
+    alm-examples: '[]'
     capabilities: Basic Install
-    operators.operatorframework.io/builder: operator-sdk-v1.13.0+git
+    operators.operatorframework.io/builder: operator-sdk-v1.19.1
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
   name: application-service.v0.0.1
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
-  customresourcedefinitions:
-    owned:
-    - description: Application is the Schema for the applications API
-      displayName: Application
-      kind: Application
-      name: applications.appstudio.redhat.com
-      version: v1alpha1
-    - description: ComponentDetectionQuery is the Schema for the componentdetectionqueries
-        API
-      displayName: Component Detection Query
-      kind: ComponentDetectionQuery
-      name: componentdetectionqueries.appstudio.redhat.com
-      version: v1alpha1
-    - description: Component is the Schema for the components API
-      displayName: Component
-      kind: Component
-      name: components.appstudio.redhat.com
-      version: v1alpha1
+  customresourcedefinitions: {}
   description: Hybrid Application Service operator
   displayName: Hybrid Application Service
   icon:
@@ -83,6 +27,7 @@ spec:
           verbs:
           - create
           - delete
+          - deletecollection
           - get
           - list
           - patch
@@ -105,44 +50,11 @@ spec:
         - apiGroups:
           - appstudio.redhat.com
           resources:
-          - snapshotenvironmentbindings
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - patch
-          - update
-          - watch
-        - apiGroups:
-          - appstudio.redhat.com
-          resources:
-          - snapshotenvironmentbindings/finalizers
-          verbs:
-          - update
-        - apiGroups:
-          - appstudio.redhat.com
-          resources:
-          - snapshotenvironmentbindings/status
-          verbs:
-          - get
-          - patch
-          - update
-        - apiGroups:
-          - appstudio.redhat.com
-          resources:
-          - snapshots
-          verbs:
-          - get
-          - list
-          - watch
-        - apiGroups:
-          - appstudio.redhat.com
-          resources:
           - componentdetectionqueries
           verbs:
           - create
           - delete
+          - deletecollection
           - get
           - list
           - patch
@@ -169,6 +81,7 @@ spec:
           verbs:
           - create
           - delete
+          - deletecollection
           - get
           - list
           - patch
@@ -192,6 +105,41 @@ spec:
           - appstudio.redhat.com
           resources:
           - environments
+          verbs:
+          - get
+          - list
+          - watch
+        - apiGroups:
+          - appstudio.redhat.com
+          resources:
+          - snapshotenvironmentbindings
+          verbs:
+          - create
+          - delete
+          - deletecollection
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - appstudio.redhat.com
+          resources:
+          - snapshotenvironmentbindings/finalizers
+          verbs:
+          - update
+        - apiGroups:
+          - appstudio.redhat.com
+          resources:
+          - snapshotenvironmentbindings/status
+          verbs:
+          - get
+          - patch
+          - update
+        - apiGroups:
+          - appstudio.redhat.com
+          resources:
+          - snapshots
           verbs:
           - get
           - list
@@ -291,7 +239,9 @@ spec:
           - create
         serviceAccountName: application-service-controller-manager
       deployments:
-      - name: application-service-controller-manager
+      - label:
+          control-plane: controller-manager
+        name: application-service-controller-manager
         spec:
           replicas: 1
           selector:
@@ -321,7 +271,7 @@ spec:
                 - --metrics-bind-address=127.0.0.1:8080
                 - --leader-elect
                 command:
-                - /manager
+                - entrypoint.sh
                 env:
                 - name: GITHUB_ORG
                   valueFrom:
@@ -335,11 +285,29 @@ spec:
                       key: token
                       name: has-github-token
                       optional: true
+                - name: GITHUB_TOKEN_LIST
+                  valueFrom:
+                    secretKeyRef:
+                      key: tokens
+                      name: has-github-token
+                      optional: true
+                - name: CDQ_GITHUB_TOKEN
+                  valueFrom:
+                    secretKeyRef:
+                      key: cdq-token
+                      name: has-github-token
+                      optional: true
                 - name: DEVFILE_REGISTRY_URL
                   valueFrom:
                     configMapKeyRef:
                       key: DEVFILE_REGISTRY_URL
                       name: application-service-devfile-registry-config
+                      optional: true
+                - name: ENVIRONMENT
+                  valueFrom:
+                    configMapKeyRef:
+                      key: ENVIRONMENT
+                      name: application-service-feature-flag-config
                       optional: true
                 image: quay.io/redhat-appstudio/application-service:next
                 imagePullPolicy: Always
@@ -447,18 +415,6 @@ spec:
     name: Red Hat
   version: 0.0.1
   webhookdefinitions:
-  - admissionReviewVersions:
-    - v1
-    containerPort: 443
-    conversionCRDs:
-    - applications.appstudio.redhat.com
-    - components.appstudio.redhat.com
-    deploymentName: application-service-controller-manager
-    generateName: capplicationscomponents.kb.io
-    sideEffects: None
-    targetPort: 9443
-    type: ConversionWebhook
-    webhookPath: /convert
   - admissionReviewVersions:
     - v1
     - v1beta1
