Private Repo Support (#386)
* Private Repo Support

Signed-off-by: Kim Tsao <ktsao@redhat.com>

* address review comments

Signed-off-by: Kim Tsao <ktsao@redhat.com>

* address review comments - add role.yaml

Signed-off-by: Kim Tsao <ktsao@redhat.com>

* Address review comments - update docs, fix numbering and remove namespace from example

Signed-off-by: Kim Tsao <ktsao@redhat.com>

---------

Signed-off-by: Kim Tsao <ktsao@redhat.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -126,6 +126,26 @@ rules:
   - list
   - watch
 - apiGroups:
+  - appstudio.redhat.com
+  resources:
+  - spifilecontentrequests
+  verbs:
+  - create
+  - get
+  - list
+- apiGroups:
+  - appstudio.redhat.com
+  resources:
+  - spifilecontentrequests/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - appstudio.redhat.com
+  resources:
+  - spifilecontentrequests/status
+  verbs:
+  - get
+- apiGroups:
   - ""
   resources:
   - configmaps
