[DEVHAS183] create kube jobs for CDQ analysis (#388)
* add k8s job

Signed-off-by: Stephanie <yangcao@redhat.com>

* set env variables

Signed-off-by: Stephanie <yangcao@redhat.com>

* fix some bugs

Signed-off-by: Stephanie <yangcao@redhat.com>

* add tests

Signed-off-by: Stephanie <yangcao@redhat.com>

* add role

Signed-off-by: Stephanie <yangcao@redhat.com>

* fix unit test failure

Signed-off-by: Stephanie <yangcao@redhat.com>

* increase config map waiting timeout to 5mins

Signed-off-by: Stephanie <yangcao@redhat.com>

* rebase

Signed-off-by: Stephanie <yangcao@redhat.com>

* address review comments

Signed-off-by: Stephanie <yangcao@redhat.com>

* fix job bug

Signed-off-by: Stephanie <yangcao@redhat.com>

* run go mod tidy

Signed-off-by: Stephanie <yangcao@redhat.com>

---------

Signed-off-by: Stephanie <yangcao@redhat.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -146,12 +146,26 @@ rules:
   verbs:
   - get
 - apiGroups:
+  - batch
+  resources:
+  - jobs
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - update
+  - watch
+- apiGroups:
   - ""
   resources:
   - configmaps
   verbs:
+  - create
+  - delete
   - get
   - list
+  - update
   - watch
 - apiGroups:
   - ""
