Address PR Feedback for MD files
Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/config/samples/binding/binding.yaml
+++ b/config/samples/binding/binding.yaml
@@ -1,4 +1,4 @@
-# API type definition is in github.com/redhat-appstudio/managed-gitops
+# API type definition is in https://github.com/redhat-appstudio/application-api/tree/main/api/v1alpha1
 apiVersion: appstudio.redhat.com/v1alpha1
 kind: SnapshotEnvironmentBinding
 metadata:
