[KFLUXBUGS-1290] Handle ownerrefs in webhook (#475)
* [KFLUXBUGS-1290] Handle ownerrefs in webhook

Signed-off-by: John Collier <jcollier@redhat.com>

* DeletionTimestamp check

Signed-off-by: John Collier <jcollier@redhat.com>

* Fix typo

Signed-off-by: John Collier <jcollier@redhat.com>

* Fix gosec

Signed-off-by: John Collier <jcollier@redhat.com>

---------

Signed-off-by: John Collier <jcollier@redhat.com>

--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -44,6 +44,7 @@ webhooks:
     - UPDATE
     resources:
     - components
+    - components/status
   sideEffects: None
 ---
 apiVersion: admissionregistration.k8s.io/v1
